--- a/src/app/multi-object-select/multi-object-chips/multi-object-chips.component.html
+++ b/src/app/multi-object-select/multi-object-chips/multi-object-chips.component.html
@@ -1,21 +1,29 @@
 <ul (click)="sectionClicked($event)" #chipsContainer>
 
-    <li 
-        class="chip-container"
-        *ngFor="let chip of chipData; let i = index">
-    
-        <div *ngIf="chip.isFavourite" class="left-section" [title]="'favorite'">
-            <i class="fa fa-star"></i>
-        </div>
-    
-        <div class="main-section">
-            {{ chip.dataVisibleNameValue }}
-        </div>
-    
-        <div class="right-section" *ngIf="chip.canDelete">
-            <i class="fa fa-close"></i>
-        </div>
-    
-    </li>
+    <ng-container *ngFor="let chip of chipData; let i = index">
+
+        <li 
+            class="chip-container"
+            [ngClass]="{ 'active-chip': chip.isActive}"
+            (click)="activateChip(chip)"
+            (contextmenu)="openContextMenu($event, chip)"
+            #chip>
+        
+            <div *ngIf="chip.isFavourite" class="left-section" [title]="'favorite'">
+                <i class="fa fa-star"></i>
+            </div>
+        
+            <div class="main-section">
+                {{ chip.dataVisibleNameValue }}
+            </div>
+        
+            <div class="right-section" (click)="onChipRemove.emit({data: chip})" *ngIf="chip.canDelete">
+                <i class="fa fa-close"></i>
+            </div>
+        
+        </li>
+
+    </ng-container>
+
 
 </ul>
