--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <app-multi-object-select 
     [data]="dataToPass"
     [globalLoading]="loading"
+    [preSelectedChips]="preSelectedChips"
     [isRequired]="true"
     [isDisabled]="false"
     [minSelectCount]="1"
     [maxSelectCount]="10"
     [isSingularInput]="false"
     [readOnlyChips]="false"
-    [isCustomInputAllowed]="false"
+    [isCustomInputAllowed]="true"
     [isSearchAllowed]="true"
     [isAsynchronousSearch]="true"
     [isResetOptionVisible]="true"
