--- a/src/app/multi-object-select/multi-object-chips/multi-object-chips.component.html
+++ b/src/app/multi-object-select/multi-object-chips/multi-object-chips.component.html
@@ -17,7 +17,7 @@
                 {{ chip.dataVisibleNameValue }}
             </div>
         
-            <div class="right-section" (click)="onChipRemove.emit({data: chip})" *ngIf="chip.canDelete">
+            <div class="right-section" (click)="removeChip(chip)" *ngIf="chip.canDelete">
                 <i class="fa fa-close"></i>
             </div>
         
