--- a/src/app/multi-object-select/multi-object-select.component.html
+++ b/src/app/multi-object-select/multi-object-select.component.html
@@ -23,6 +23,8 @@
             [placeholder]="placeholderKey"
             [readonly]="!isSearchAllowed ? 'readonly' : null"
             (input)="queryTrigger($any($event.target).value)"
+            (change)="addCustomChip($any($event.target).value)"
+            (beforeinput)="activateLastChip($event)"
             (click)="focusSearch()"
             #queryBox>
     </div>
@@ -35,7 +37,7 @@
 
         <div class="action-button-container">
             <div class="buttons-container">
-                <button *ngIf="isSelectAllAvailable" (click)="selectAllOptions()">
+                <button *ngIf="isSelectAllAvailable && !isSingularInput" (click)="selectAllOptions()">
                     <span *ngIf="!isAllSelected">{{ 'select-all' }}</span>
                     <span *ngIf="isAllSelected">{{ 'unselect-all' }}</span>
                 </button>
