async search completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,40 @@
-<app-multi-object-select 
-    [data]="dataToPass"
-    [globalLoading]="loading"
-    [preSelectedChips]="preSelectedChips"
-    [isRequired]="true"
-    [isDisabled]="false"
-    [minSelectCount]="1"
-    [maxSelectCount]="10"
-    [isSingularInput]="false"
-    [readOnlyChips]="false"
-    [isCustomInputAllowed]="true"
-    [isSearchAllowed]="true"
-    [isAsynchronousSearch]="true"
-    [isResetOptionVisible]="true"
-    [isSelectAllAvailable]="true"
-    [placeholderKey]="'add users'"
-    [noDataMessageKey]="'no-data-available'"
-    [isMultipleLevel]="true"
-    [isAsynchronouslyExpandable]="true"
-    [dataTypeId]="1"
-    [isLoading]="true"
-    [isCustomAllSelectOption]="false"
-    [customAllSelectOptionUniqueId]="'-1'"
-    [customAllSelectOptionNameKey]="'all-options'"
-    [sectionConfigurationObject]="sectionDataToPass"
-
-    (dataRequester)="loadChildren($event)"
-    (onChipAdd)="onChipAdd($event)"
-    (onChipRemove)="onChipRemove($event)"
-    (onChipClick)="onChipClick($event)"
-    (onQuerySeach)="searchValue($event)"
-    (onReset)="onReset($event)"
-    (onSelectAll)="onSelectAll($event)"
+<div class="container">
+    <app-multi-object-select 
+        [data]="dataToPass"
+        [globalLoading]="loading"
+        [preSelectedChips]="preSelectedChips"
+        [isRequired]="true"
+        [isDisabled]="false"
+        [minSelectCount]="2"
+        [maxSelectCount]="-1"
+        [isSingularInput]="false"
+        [readOnlyChips]="false"
+        [isCustomInputAllowed]="false"
+        [isSearchAllowed]="true"
+        [isAsynchronousSearch]="false"
+        [isResetOptionVisible]="true"
+        [isSelectAllAvailable]="true"
+        [placeholderKey]="'add users'"
+        [noDataMessageKey]="'no-data-available'"
+        [isMultipleLevel]="true"
+        [isAsynchronouslyExpandable]="true"
+        [dataTypeId]="1"
+        [isCustomAllSelectOption]="false"
+        [customAllSelectOptionUniqueId]="'-1'"
+        [customAllSelectOptionNameKey]="'all-options'"
+        [sectionConfigurationObject]="sectionDataToPass"
     
-    >
-</app-multi-object-select>
+        (errorMessage)="errorOccured($event)"
+        (selectionIds)="finalDataReceived($event)"
+        (dataRequester)="loadChildren($event)"
+        (onChipAdd)="onChipAdd($event)"
+        (onChipRemove)="onChipRemove($event)"
+        (onChipClick)="onChipClick($event)"
+        (onQuerySeach)="searchValue($event)"
+        (onReset)="onReset($event)"
+        (onSelectAll)="onSelectAll($event)"
+        
+        #myDropdown
+        >
+    </app-multi-object-select>
+</div>
