--- a/src/app/multi-object-select/multi-object-select.component.html
+++ b/src/app/multi-object-select/multi-object-select.component.html
@@ -1,6 +1,11 @@
 <div 
     class="container"
-    [ngClass]="{ 'search-not-allowed': !isSearchAllowed, 'container-disabled': isDisabled, 'container-read-only': readOnlyChips }">
+    [ngClass]="{ 
+        'search-not-allowed': !isSearchAllowed, 
+        'container-disabled': isDisabled, 
+        'container-read-only': readOnlyChips, 
+        'section-invalid' : (dropdownFormControl?.touched && dropdownFormControl?.dirty) && (chipData.length > maxSelectCount || chipData.length < minSelectCount)
+    }">
 
     <div class="wrapper">        
         <div *ngIf="chipData.length > 0" class="selection-container">
@@ -33,21 +38,25 @@
 
 <div class="list-container">
 
-    <ul *ngIf="!isLoading && (multiObjectData && multiObjectData?.dropDownSections) || (multiObjectDataForQuery && multiObjectDataForQuery?.dropDownSections)">
+    <ul *ngIf="!isLoading && !globalLoading && (multiObjectData && multiObjectData?.dropDownSections) || (multiObjectDataForQuery && multiObjectDataForQuery?.dropDownSections)">
 
-        <div class="action-button-container">
-            <div class="buttons-container">
-                <button *ngIf="isSelectAllAvailable && !isSingularInput && !readOnlyChips" (click)="selectAllOptions()">
-                    <span *ngIf="!isAllSelected">{{ 'select-all' }}</span>
-                    <span *ngIf="isAllSelected">{{ 'unselect-all' }}</span>
-                </button>
+        <ng-container *ngIf="queryState === false">
+
+            <div class="action-button-container">
+                <div class="buttons-container">
+                    <button *ngIf="isSelectAllAvailable && !isSingularInput && !readOnlyChips" (click)="selectAllOptions()">
+                        <span *ngIf="!isAllSelected">{{ 'select-all' }}</span>
+                        <span *ngIf="isAllSelected">{{ 'unselect-all' }}</span>
+                    </button>
+                </div>
+                <div class="buttons-container">
+                    <button *ngIf="isResetOptionVisible && !readOnlyChips" (click)="selectAllOptions(true)" >
+                        {{ 'reset' }}
+                    </button>
+                </div>
             </div>
-            <div class="buttons-container">
-                <button *ngIf="isResetOptionVisible && !readOnlyChips" (click)="selectAllOptions(true)" >
-                    {{ 'reset' }}
-                </button>
-            </div>
-        </div>
+        
+        </ng-container>
 
         <ng-container *ngIf="!queryState">
 
@@ -136,13 +145,13 @@
 
     </ul>
 
-    <ng-container *ngIf="!isLoading && (!multiObjectData?.dropDownSections) && (!multiObjectDataForQuery?.dropDownSections)">
+    <ng-container *ngIf="!isLoading && !globalLoading && (!multiObjectData?.dropDownSections) && (!multiObjectDataForQuery?.dropDownSections)">
         <div class="no-data-text">
             {{ noDataMessageKey }}
         </div>
     </ng-container>
 
-    <ng-container *ngIf="isLoading">
+    <ng-container *ngIf="isLoading || globalLoading">
         <div class="loading">
             {{ 'loading' }}
         </div>
@@ -178,7 +187,7 @@
                 </div>
     
                 <div 
-                    *ngIf="isMultipleLevel === true"    
+                    *ngIf="(isMultipleLevel === true) && (queryState === false)"
                     class="icon-container" 
                     [ngClass]=" { 'expandable' : op.dataExpandableValue === true }"
                     [title]="'expand'" 
