--- a/src/app/multi-object-select/multi-object-select.component.scss
+++ b/src/app/multi-object-select/multi-object-select.component.scss
@@ -8,6 +8,18 @@
     transition: all 200ms;
     cursor: text;
 
+    &.section-invalid {
+        outline: none;
+        border: 1px solid rgba(236, 82, 82, 0.8);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(236, 82, 82, 0.6);
+
+        &:focus-within {
+            outline: none;
+            border: 1px solid rgba(236, 82, 82, 0.8);
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(236, 82, 82, 0.6);    
+        }
+    }
+
     .wrapper {
         font-size: 14px;
         display: flex;
@@ -98,7 +110,7 @@
         display: flex;
         gap: 8px;
         font-weight: 600;
-        border-bottom: 1px solid #ccc;
+        border: 1px solid #aaa;
         padding: 4px;
         align-items: center;
 
