todo: mix async and local search

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,13 @@
         [isRequired]="true"
         [isDisabled]="false"
         [minSelectCount]="2"
-        [maxSelectCount]="-1"
+        [maxSelectCount]="4"
         [isSingularInput]="false"
         [readOnlyChips]="false"
         [isCustomInputAllowed]="false"
         [isSearchAllowed]="true"
-        [isAsynchronousSearch]="false"
+        [isAsynchronousSearch]="true"
+        [isClientSideSearchAllowed]="true"
         [isResetOptionVisible]="true"
         [isSelectAllAvailable]="true"
         [placeholderKey]="'add users'"
@@ -25,7 +26,7 @@
         [sectionConfigurationObject]="sectionDataToPass"
     
         (errorMessage)="errorOccured($event)"
-        (selectionIds)="finalDataReceived($event)"
+        (selectionChange)="finalDataReceived($event)"
         (dataRequester)="loadChildren($event)"
         (onChipAdd)="onChipAdd($event)"
         (onChipRemove)="onChipRemove($event)"
