--- a/src/app/multi-object-select/multi-object-select.component.html
+++ b/src/app/multi-object-select/multi-object-select.component.html
@@ -4,7 +4,7 @@
         'search-not-allowed': !isSearchAllowed, 
         'container-disabled': isDisabled, 
         'container-read-only': readOnlyChips, 
-        'section-invalid' : (dropdownFormControl?.touched && dropdownFormControl?.dirty) && (chipData.length > maxSelectCount || chipData.length < minSelectCount)
+        'section-invalid' : (dropdownFormControl && dropdownFormControl.touched && dropdownFormControl.dirty) && (chipData.length > maxSelectCount || chipData.length < minSelectCount)
     }">
 
     <div class="wrapper">        
@@ -22,6 +22,7 @@
         </div>
     
         <input
+            *ngIf="!isSearchAllowed && chipData.length === 0"
             [ngClass]="{ 'search-not-allowed': !isSearchAllowed }"
             class="title-query" 
             type="text"
@@ -45,7 +46,7 @@
             <div class="action-button-container">
                 <div class="buttons-container">
                     <button *ngIf="isSelectAllAvailable && !isSingularInput && !readOnlyChips" (click)="selectAllOptions()">
-                        <span *ngIf="!isAllSelected">{{ 'select-all' }}</span>
+                        <span *ngIf="!isAllSelected && !isSingularInput">{{ 'select-all' }}</span>
                         <span *ngIf="isAllSelected">{{ 'unselect-all' }}</span>
                     </button>
                 </div>
@@ -169,7 +170,7 @@
 
     </ul>
 
-    <ng-container *ngIf="!isLoading && !globalLoading && (!multiObjectData?.dropDownSections) && (!multiObjectDataForQuery?.dropDownSections)">
+    <ng-container *ngIf="!isLoading && !globalLoading && !searchLoading && (!multiObjectData?.dropDownSections) && (!multiObjectDataForQuery?.dropDownSections)">
         <div class="no-data-text">
             {{ noDataMessageKey }}
         </div>
@@ -187,7 +188,7 @@
 <ng-template #dropdownTree let-data let-levelIndex="levelIndex" let-sectionData="sectionData">
 
 
-    <ng-container *ngIf="!data || data.length ===0">
+    <ng-container *ngIf="!isLoading && !globalLoading && !searchLoading && (!data || data.length === 0)">
         <div class="no-data-text">
             {{ noDataMessageKey }}
         </div>
