added support for popup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+
+ngb-popover-window.popover {
+    display: block;
+    font-size: 12px;
+    width: auto;
+  
+  
+    &.no-arrow {
+      .arrow {
+        display: none;
+      }
+    }
+}  
