--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
-<div class="container">
+<br>
+<div>
     <app-multi-object-select 
         [data]="dataToPass"
         [globalLoading]="loading"
         [preSelectedChips]="preSelectedChips"
         [isRequired]="true"
         [isDisabled]="false"
-        [minSelectCount]="-1"
-        [maxSelectCount]="-1"
+        [minSelectCount]="1"
+        [maxSelectCount]="3"
         [isSingularInput]="false"
         [readOnlyChips]="false"
         [isCustomInputAllowed]="false"
@@ -37,3 +38,5 @@
         >
     </app-multi-object-select>
 </div>
+
+<!-- <app-sample-popover></app-sample-popover> -->
