--- a/src/app/multi-object-select/multi-object-select.component.html
+++ b/src/app/multi-object-select/multi-object-select.component.html
@@ -5,27 +5,35 @@
         'container-disabled': isDisabled, 
         'container-read-only': readOnlyChips, 
         'section-invalid' : (dropdownFormControl && dropdownFormControl.touched && dropdownFormControl.dirty) && (chipData.length > maxSelectCount || chipData.length < minSelectCount)
-    }">
+    }"
+    [ngbPopover]="popContent"
+    [placement]="'auto'" 
+    [autoClose]="'outside'" 
+    [container]="'body'"    
+    tabindex="0"
+    #topContainer
+    #popoverInstance="ngbPopover"
+    >
 
     <div class="wrapper">        
         <div *ngIf="chipData.length > 0" class="selection-container">
     
             <app-multi-object-chips 
-            [chipData]="chipData"
-            (onChipRemove)="chipRemovalTrigger($event)"
-            (focusSearch)="focusSearch()"
-            (onChipClick)="onChipClick.emit($event)"
-            (onChipContextMenu)="onChipContextMenu.emit($event)"
-            #chipsContainer>
+                [chipData]="chipData"
+                (onChipRemove)="chipRemovalTrigger($event)"
+                (focusSearch)="focusSearch()"
+                (onChipClick)="onChipClick.emit($event)"
+                (onChipContextMenu)="onChipContextMenu.emit($event)"
+                #chipsContainer>
             </app-multi-object-chips>
     
         </div>
     
         <input
-            *ngIf="!isSearchAllowed && chipData.length === 0"
-            [ngClass]="{ 'search-not-allowed': !isSearchAllowed }"
+            *ngIf="(!isSearchAllowed && chipData.length === 0) || (isSearchAllowed && chipData.length === 0) || (isSearchAllowed && chipData.length > 0 && popoverInstance.isOpen())"
             class="title-query" 
             type="text"
+            [ngClass]="{ 'search-not-allowed': !isSearchAllowed }"
             [placeholder]="placeholderKey"
             [readonly]="!isSearchAllowed ? 'readonly' : null"
             (input)="queryTrigger($any($event.target).value)"
@@ -37,91 +45,49 @@
 
 </div>
 
-<div class="list-container">
-
-    <ul *ngIf="!isLoading && !globalLoading && (multiObjectData && multiObjectData?.dropDownSections) || (multiObjectDataForQuery && multiObjectDataForQuery?.dropDownSections)">
-
-        <ng-container *ngIf="queryState === false">
-
-            <div class="action-button-container">
-                <div class="buttons-container">
-                    <button *ngIf="isSelectAllAvailable && !isSingularInput && !readOnlyChips" (click)="selectAllOptions()">
-                        <span *ngIf="!isAllSelected && !isSingularInput">{{ 'select-all' }}</span>
-                        <span *ngIf="isAllSelected">{{ 'unselect-all' }}</span>
-                    </button>
-                </div>
-                <div class="buttons-container">
-                    <button *ngIf="isResetOptionVisible && !readOnlyChips" (click)="selectAllOptions(true)" >
-                        {{ 'reset' }}
-                    </button>
-                </div>
-            </div>
-        
-        </ng-container>
-
-        <ng-container *ngIf="!queryState">
-
-            <li *ngIf="isCustomAllSelectOption">
-                <div class="section-details-container">
-                    <input 
-                    type="checkbox" 
-                    (change)="selectAllOptions(!$any($event.target).checked)"
-                    [id]="customAllSelectOptionUniqueId">
-        
-                    <label 
-                        class="selectable"
-                        [for]="customAllSelectOptionUniqueId" 
-                        [title]="customAllSelectOptionNameKey">
-        
-                        {{ customAllSelectOptionNameKey }}
-                    </label>
+<ng-template #popContent>
+    <div class="list-container" [ngStyle]="{ 'width': computedWidth, 'max-width': computedWidth }">
+        <ul *ngIf="!isLoading && !globalLoading && (multiObjectData && multiObjectData?.dropDownSections) || (multiObjectDataForQuery && multiObjectDataForQuery?.dropDownSections)">
     
+            <ng-container *ngIf="queryState === false">
+    
+                <div class="action-button-container">
+                    <div class="buttons-container">
+                        <button *ngIf="isSelectAllAvailable && !isSingularInput && !readOnlyChips" (click)="selectAllOptions()">
+                            <span *ngIf="!isAllSelected && !isSingularInput">{{ 'select-all' }}</span>
+                            <span *ngIf="isAllSelected">{{ 'unselect-all' }}</span>
+                        </button>
+                    </div>
+                    <div class="buttons-container">
+                        <button *ngIf="isResetOptionVisible && !readOnlyChips" (click)="selectAllOptions(true)" >
+                            {{ 'reset' }}
+                        </button>
+                    </div>
                 </div>
-            </li>
-
-            <li *ngFor="let s of multiObjectData.dropDownSections; let sectionindex = index">
+            
+            </ng-container>
     
-                <ng-container *ngIf="s.isVisible === true">
+            <ng-container *ngIf="!queryState">
     
-                    <div *ngIf="s.sectionNameKey" class="section-details-container">
-        
+                <li *ngIf="isCustomAllSelectOption">
+                    <div class="section-details-container">
                         <input 
-                        *ngIf="s.allowSectionSelection === true"
                         type="checkbox" 
-                        (change)="sectionSelectionTrigger($any($event.target).checked, s)"
-                        [id]="s.sectionId">
+                        (change)="selectAllOptions(!$any($event.target).checked)"
+                        [id]="customAllSelectOptionUniqueId">
             
                         <label 
-                            class=""
-                            [for]="s.sectionId" 
-                            [title]="s.sectionTooltipKey || s.sectionNameKey"
-                            [ngClass]="{ 'selectable': s.allowSectionSelection === true }">
+                            class="selectable"
+                            [for]="customAllSelectOptionUniqueId" 
+                            [title]="customAllSelectOptionNameKey">
             
-                            {{ s.sectionNameKey }}
+                            {{ customAllSelectOptionNameKey }}
                         </label>
         
                     </div>
+                </li>
     
-                    <ul>
-                        <ng-container [ngTemplateOutlet]="dropdownTree" [ngTemplateOutletContext]="{ 
-                                $implicit: s.children,
-                                levelIndex: 1,
-                                sectionData: s
-                            }">
-                        </ng-container>
-                    </ul>
-    
-                </ng-container>
-    
-            </li>
-
-        </ng-container>
-
-        <ng-container *ngIf="queryState">
-
-            <ng-container *ngIf="multiObjectDataForQuery">
-
-                <li *ngFor="let s of multiObjectDataForQuery.dropDownSections; let sectionindex = index">
+                <li *ngFor="let s of multiObjectData.dropDownSections; let sectionindex = index">
         
                     <ng-container *ngIf="s.isVisible === true">
         
@@ -156,33 +122,76 @@
                     </ng-container>
         
                 </li>
-
-                <ng-container *ngIf="searchLoading">
-                    <div class="loading">
-                        {{ 'loading more results...' }}
-                    </div>
-                </ng-container>
-
+    
             </ng-container>
-
+    
+            <ng-container *ngIf="queryState">
+    
+                <ng-container *ngIf="multiObjectDataForQuery">
+    
+                    <li *ngFor="let s of multiObjectDataForQuery.dropDownSections; let sectionindex = index">
+            
+                        <ng-container *ngIf="s.isVisible === true">
+            
+                            <div *ngIf="s.sectionNameKey" class="section-details-container">
+                
+                                <input 
+                                *ngIf="s.allowSectionSelection === true"
+                                type="checkbox" 
+                                (change)="sectionSelectionTrigger($any($event.target).checked, s)"
+                                [id]="s.sectionId">
+                    
+                                <label 
+                                    class=""
+                                    [for]="s.sectionId" 
+                                    [title]="s.sectionTooltipKey || s.sectionNameKey"
+                                    [ngClass]="{ 'selectable': s.allowSectionSelection === true }">
+                    
+                                    {{ s.sectionNameKey }}
+                                </label>
+                
+                            </div>
+            
+                            <ul>
+                                <ng-container [ngTemplateOutlet]="dropdownTree" [ngTemplateOutletContext]="{ 
+                                        $implicit: s.children,
+                                        levelIndex: 1,
+                                        sectionData: s
+                                    }">
+                                </ng-container>
+                            </ul>
+            
+                        </ng-container>
+            
+                    </li>
+    
+                    <ng-container *ngIf="searchLoading">
+                        <div class="loading">
+                            {{ 'loading more results...' }}
+                        </div>
+                    </ng-container>
+    
+                </ng-container>
+    
+            </ng-container>
+    
+    
+        </ul>
+    
+        <ng-container *ngIf="!isLoading && !globalLoading && !searchLoading && (!multiObjectData?.dropDownSections) && (!multiObjectDataForQuery?.dropDownSections)">
+            <div class="no-data-text">
+                {{ noDataMessageKey }}
+            </div>
         </ng-container>
-
-
-    </ul>
-
-    <ng-container *ngIf="!isLoading && !globalLoading && !searchLoading && (!multiObjectData?.dropDownSections) && (!multiObjectDataForQuery?.dropDownSections)">
-        <div class="no-data-text">
-            {{ noDataMessageKey }}
-        </div>
-    </ng-container>
-
-    <ng-container *ngIf="isLoading || globalLoading">
-        <div class="loading">
-            {{ 'loading' }}
-        </div>
-    </ng-container>
-
-</div>
+    
+        <ng-container *ngIf="isLoading || globalLoading">
+            <div class="loading">
+                {{ 'loading' }}
+            </div>
+        </ng-container>
+    
+    </div>
+</ng-template>
 
 
 <ng-template #dropdownTree let-data let-levelIndex="levelIndex" let-sectionData="sectionData">
@@ -194,7 +203,7 @@
         </div>
     </ng-container>
     
-    <ul [ngStyle]="{ 'margin-left': levelIndex > 1 ? '24px' : '0' }" class="ul-template">
+    <ul [ngStyle]="{ 'margin-left': levelIndex > 1 ? '24px' : '0', 'width': levelIndex > 1 ? 'calc(100% -  24px )' : '100%' }" class="ul-template">
 
         <li 
             [ngStyle]="{ 'border-left': levelIndex === 1 ? 'none' : '' }"
