--- a/src/app/multi-object-select/multi-object-select.component.scss
+++ b/src/app/multi-object-select/multi-object-select.component.scss
@@ -72,14 +72,24 @@
         box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(82, 168, 236, .6);
     }
 
+    &:focus {
+        outline: none;
+        border: 1px solid rgba(82, 168, 236, .8);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(82, 168, 236, .6);
+    }
+
 }
 
 .list-container {
     border: 1px solid #ccc;
+    background-color: #fff;
     border-radius: 4px;
     white-space: normal;
     font-size: 14px;
     transition: all 200ms;
+    min-width: 300px;
+    max-height: 400px;
+    overflow: auto;
 
     .action-button-container {
         display: flex;
@@ -110,9 +120,17 @@
         display: flex;
         gap: 8px;
         font-weight: 600;
-        border: 1px solid #aaa;
+        border-top: 1px solid #aaa;
+        border-bottom: 1px solid #aaa;
         padding: 4px;
         align-items: center;
+
+        label {
+            clear: both;
+            display: inline-block;
+            overflow: hidden;
+            white-space: nowrap;
+        }
 
         .selectable {
             cursor: pointer;
@@ -125,15 +143,18 @@
         padding: 0;
         margin: 0;
         transition: inherit;
+        display: inline-block;
+        width: 100%;
 
         li {
 
             &:not(:last-child) {
                 border-bottom: 1px solid #eee;
             }
-
+            display: inline-block;
             border-left: 1px solid #eee;
             background-color: #fff;
+            width: calc(100% - 1px);
 
             .dropdown-section {
                 background-color: #fff;
@@ -156,7 +177,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: 14px !important;
+                min-width: 14px !important;
                 aspect-ratio: 1;
                 font-size: 12px;
                 margin: 0;
@@ -170,12 +191,18 @@
             }
 
             .title-container {
-                width: 100%;
+                flex-grow: 1;
+                display: flex;
+                align-items: center;
 
                 label {
-                    display: block;
                     width: 100%;
+                    clear: both;
+                    display: inline-block;
+                    overflow: hidden;
+                    white-space: nowrap;
                     cursor: pointer;
+
                 }
 
             }
