--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <app-multi-object-select 
         [data]="dataToPass"
         [globalLoading]="loading"
+        [sectionConfigData]="sectionDataToPass"
         [preSelectedChips]="preSelectedChips"
         [isRequired]="true"
         [isDisabled]="false"
