--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <br>
-<div>
+<button (click)="isVisible = !isVisible">close</button>
+<br>
+<div *ngIf="isVisible">
     <app-multi-object-select 
         [data]="dataToPass"
         [globalLoading]="loading"
@@ -8,7 +10,7 @@
         [isRequired]="true"
         [isDisabled]="false"
         [minSelectCount]="1"
-        [maxSelectCount]="3"
+        [maxSelectCount]="23"
         [isSingularInput]="false"
         [readOnlyChips]="false"
         [isCustomInputAllowed]="true"
