--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         [maxSelectCount]="23"
         [isSingularInput]="false"
         [readOnlyChips]="false"
-        [isCustomInputAllowed]="true"
+        [isCustomInputAllowed]="false"
         [isSearchAllowed]="true"
         [isAsynchronousSearch]="true"
         [isClientSideSearchAllowed]="true"
