--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
         [noDataMessageKey]="'no-data-available'"
         [isMultipleLevel]="true"
         [isAsynchronouslyExpandable]="true"
+        [hierarchySelectionModificationAllowed]="true"
         [isCustomAllSelectOption]="false"
         [customAllSelectOptionUniqueId]="'-1'"
         [customAllSelectOptionNameKey]="'all-options'"
