--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
         [sectionConfigData]="sectionDataToPass"
         [preSelectedChips]="preSelectedChips"
         [isRequired]="true"
-        [isDisabled]="false"
+        [isDisabled]="projectValidationXHR"
         [minSelectCount]="1"
         [maxSelectCount]="23"
-        [isSingularInput]="false"
+        [isSingularInput]="true"
         [readOnlyChips]="false"
         [isCustomInputAllowed]="false"
         [isSearchAllowed]="true"
@@ -27,6 +27,8 @@
         [isCustomAllSelectOption]="false"
         [customAllSelectOptionUniqueId]="'-1'"
         [customAllSelectOptionNameKey]="'all-options'"
+        [invalidMessage]="customInvalidMessageKey"
+        [externalValidation]="isSelectionValid"
     
         (errorMessage)="errorOccured($event)"
         (selectionChange)="finalDataReceived($event)"
