--- a/src/app/multi-object-select/multi-object-select.component.html
+++ b/src/app/multi-object-select/multi-object-select.component.html
@@ -62,7 +62,9 @@
     
             <ng-container *ngIf="queryState === false">
     
-                <div class="action-button-container">
+                <div 
+                    class="action-button-container"
+                    >
                     <div class="buttons-container">
                         <button *ngIf="isSelectAllAvailable && !isSingularInput && !readOnlyChips" (click)="selectAllOptions()">
                             <span *ngIf="!isAllSelected && !isSingularInput">{{ 'select-all' }}</span>
