--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         [isDisabled]="projectValidationXHR"
         [minSelectCount]="1"
         [maxSelectCount]="23"
-        [isSingularInput]="true"
+        [isSingularInput]="false"
         [readOnlyChips]="false"
         [isCustomInputAllowed]="false"
         [isSearchAllowed]="true"
