integration: new tree structure in current dropdown

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<br>
+<!-- <br>
 <button (click)="isVisible = !isVisible">close</button>
 <br>
 <div>
@@ -51,6 +51,8 @@
         #myDropdown
         >
     </app-multi-object-select>
-</div>
+</div> -->
+
+<app-custom-select></app-custom-select>
 
 <!-- <app-sample-popover></app-sample-popover> -->
