--- a/src/app/shared/custom-chips/custom-chips.component.html
+++ b/src/app/shared/custom-chips/custom-chips.component.html
@@ -5,7 +5,7 @@
         <li 
             *ngIf="c.dataVisibleNameValue && c.dataVisibleNameValue !== ''"
             class="chip-container"
-            [ngClass]="{ 'active-chip': c.isActive, 'chip-invalid': c.isInvalid}"
+            [ngClass]="{ 'active-chip': c.isCurrentNodeActive, 'chip-invalid': c.isInvalid}"
             (click)="activateChip(c)"
             (contextmenu)="openContextMenu($event, c)"
             #chip>
